--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon index"
+    "start": "npx nodemon index",
+    "migrate": "npx db-migrate --migrations-dir app/db/migrations  --config app/db/migrate.conf.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.11",
+    "db-migrate-mysql": "^2.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "log4js": "^6.3.0",
